Supports jdk 17 trino