@@ -2,14 +2,13 @@
 
 Because Trino's dependency is JDK 11, it is not possible to include the trino connector in [flink-table-store](https://github.com/apache/flink-table-store).
 
-**Please use JDK 11, currently only the Trino version with JDK 11 is supported**
-
 ## Deploy Table Store Trino Connector
 
-Building Table Store Trino Bundled Jar is by running (JDK 11 required):
+Building Table Store Trino Bundled Jar is by running:
 
-- Trino 388: `mvn clean install -DskipTests`
-- Trino 358: `mvn clean install -DskipTests -Ptrino-358`
+- Trino 388: `mvn clean install -DskipTests` , (JDK 11 required).
+- Trino 358: `mvn clean install -DskipTests -Ptrino-358` , (JDK 11 required).
+- Trino 391: `mvn clean install -DskipTests -Ptrino-391` , (JDK 17 required and your jvm options should add: `--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED` ).
 
 Then, copy `target/flink-table-store-trino-*.jar` and [flink-shaded-hadoop-2-uber-2.8.3-10.0.jar](https://repo.maven.apache.org/maven2/org/apache/flink/flink-shaded-hadoop-2-uber/2.8.3-10.0/flink-shaded-hadoop-2-uber-2.8.3-10.0.jar)
 to `plugin/tablestore`.
